# Course-GenomeMapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: maroon_mapper.yml
docs/: README.md
docs/step_0/: README.md
docs/step_1/: README.md
docs/step_2/: README.md
docs/step_3/: README.md
docs/step_4/: README.md
docs/step_5/: README.md
docs/step_6/: README.md
include/: README.md
src/: .main_.cpp.swp  README.md  main.cpp
step_0/: README.md  preliminaries.md
test/: README.md
